<resources>
    <string name="app_name">Launsz</string>
    <string name="title_activity_home">Launsz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_apps_list">Apps</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="menu_items">
        <item>Settings</item>
        <item>Wallpaper</item>
        <item>About</item>
        <item>Feedback</item>
    </string-array>

    <string name="color_enabled_key">color_enabled_key</string>
    <string name="color_disabled_key">color_disabled_key</string>
    <string name="alphabet_bold_key">alphabet_bold_key</string>
    <string name="bg_dim_key">bg_dim_key</string>
    <string name="bg_dim_amount_key">bg_dim_amount_key</string>
    <string name="music_ctrl_key">music_ctrl_key</string>

    <string name="music_ctrl_summ">Control music by swiping left/right/up/down\nUp: Play/Pause music\nDown: Stop music\nRight: Next track\nLeft: Previous track</string>
    <string name="about_summary"><b>About</b>
        \nDead simple launcher focused on productivity, speed &amp; simplicity.
        <hr />

        \n\n<b>Author:</b>
        \nMohammed Sazid Al Rashid
        \nTwitter: <a href="http://twitter.com/sazidz">@sazidz</a>
        \nG+: <a href="http://plus.google.com/+SazidAlRashid">sazidozon</a>
        \nXDA: <a href="http://forum.xda-developers.com/member.php?u=5585719">sazid4199</a>

        \n\n<b>Special thanks to:</b>
        \n> My big brother ;)

        \n\n\n<i>Feature request? Suggestion? Critique? Complain? Why not send an email? :D</i>
    </string>
    <string name="email_summ">Contact the developer</string>
    <string name="email_uri">mailto:sazidozon@gmail.com</string>
    <string name="email_sub">Launsz: [your subject here]</string>

    <string name="restart_app_title">Restart Launsz</string>
    <string name="restart_app_summ">Please restart the launcher (or press the back button) for the settings to take effect</string>
    <string name="previous_track"><![CDATA[<]]></string>
    <string name="play_pause_track"><![CDATA[<>]]></string>
    <string name="next_track"><![CDATA[>]]></string>
    <string name="loading">Loading…</string>
</resources>
