<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Mohammed Sazid-Al-Rashid
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_warning"
        android:summary="@string/restart_app_summ"
        android:title="@string/restart_app_title" />

    <PreferenceCategory android:title="General">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/alphabet_bold_key"
            android:summaryOff="Alphabets are now normal"
            android:summaryOn="Alphabets are now bolded"
            android:title="Bold alphabets" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/bg_dim_key"
            android:summaryOff="Background is normal"
            android:summaryOn="Background is dimmed"
            android:title="Dim background" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            app:maxValue="100"
            app:minValue="0"
            app:interval="1"
            android:defaultValue="0"
            app:measurementUnit="%"
            android:dependency="@string/bg_dim_key"
            android:key="@string/bg_dim_amount_key"
            android:summary="Dim the background by the selected amount"
            android:title="Dim amount" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Colors">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/color_enabled_default"
            android:key="@string/color_enabled_key"
            android:summary="Enabled item color"
            android:title="Primary color" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/color_disabled_default"
            android:key="@string/color_disabled_key"
            android:summary="Disabled item color"
            android:title="Secondary color" />

    </PreferenceCategory>

    <Preference
        android:icon="@drawable/ic_email"
        android:summary="@string/email_summ"
        android:title="Email">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/email_uri">
            <extra
                android:name="android.intent.extra.SUBJECT"
                android:value="@string/email_sub" />
        </intent>
    </Preference>

</PreferenceScreen>